--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-material-dropdown-v2": "^0.11.1",
+    "react-native-paper": "^4.7.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
